--- a/css/style.css
+++ b/css/style.css
@@ -1111,6 +1111,10 @@ address span a {
   color: #008ED6;
 }
 
+.font-size-medium {
+  font-size: 16px; /* You can adjust the size as desired */
+}
+
 #google_map {
   width: 100%;
   height: 400px;
