--- a/css/style.css
+++ b/css/style.css
@@ -1111,7 +1111,7 @@ address span a {
   color: #008ED6;
 }
 
-.font-size-medium {
+.FONT-SIZE-MEDIUM {
   font-size: 16px; /* You can adjust the size as desired */
 }
 
